Geofeelingsapp/public/stylesheets/styles.css
/*
A custom Bootstrap 3.1 theme from http://bootply.com\

This CSS code should follow the 'bootstrap.css'
in your HTML file.

license: MIT
author: bootply.com
*/


html,body{
  	height:100%;
}

body{
  	padding-top:50px; /*padding for navbar*/
}

.navbar-custom .icon-bar {
	background-color:#fff;
}

.navbar-custom {
	background-color: #168ccc;
    color:#fff;
}

.navbar-custom li>a:hover,.navbar-custom li>a:focus {
	background-color:#49bfff;
}

.navbar-custom a{
    color:#fefefe;
}

.navbar-custom .form-control:focus {
	border-color: #49bfff;
	outline: 0;
	-webkit-box-shadow: inset 0 0 0;
	box-shadow: inset 0 0 0;
}

#main, #main>.row {
	height:100%;
}

#main>.row {
    /*overflow-y:scroll;*/
}

#right {
	height:100%;
	float: right;
}

#map-canvas {
	width:74.666%;
    height:calc(100% - 0);
    position:absolute;
    top:50px;
    bottom:0;
    overflow:hidden;
	left:0;
}

#right > h2:first-child{
	text-align: center;
}

.cc-selector input{
	margin:0;padding:0;
	-webkit-appearance:none;
	-moz-appearance:none;
	appearance:none;
}

.cc-selector-2 input{
	position:absolute;
	z-index:999;
}

.happy{background-image:url(../images/happy.png);}
.unhappy{background-image:url(../images/unhappy.png);}

.cc-selector-2 input:active +.emoticon-cc, .cc-selector input:active +.emoticon-cc{opacity: .9;}
.cc-selector-2 input:checked +.emoticon-cc, .cc-selector input:checked +.emoticon-cc{
	-webkit-filter: none;
	-moz-filter: none;
	filter: none;
}
.emoticon-cc{
	cursor:pointer;
	background-size:contain;
	background-repeat:no-repeat;
	display:inline-block;
	width:48.6%;
	height:210px;
	-webkit-transition: all 100ms ease-in;
	-moz-transition: all 100ms ease-in;
	transition: all 100ms ease-in;
	-webkit-filter: brightness(1.8) grayscale(1) opacity(.7);
	-moz-filter: brightness(1.8) grayscale(1) opacity(.7);
	filter: brightness(1.8) grayscale(1) opacity(.7);
}
.emoticon-cc:hover{
	-webkit-filter: brightness(1.2) grayscale(.5) opacity(.9);
	-moz-filter: brightness(1.2) grayscale(.5) opacity(.9);
	filter: brightness(1.2) grayscale(.5) opacity(.9);
}

#loggedUser{
	padding:15px;
	float: left;
}

/*Frontpage*/

#frontMainDiv{
	margin:2% -150px 150px 25%;
	top:10%;
}

#frontRegister{
	left:33.25%;
	clear: both;
	border: 1px solid #e1e8ed;
	background-color: white;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	position: inherit;
	margin-top:1.5%;
}


#frontLogin{
	border: 1px solid #e1e8ed;
	background-color: white;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	margin-top:2%;
}

#cf{
	width: 100%;
	height: 100%;
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
}

#cf img {
	position:absolute;
	left:0;
	-webkit-transition: opacity 1s ease-in-out;
	-moz-transition: opacity 1s ease-in-out;
	-o-transition: opacity 1s ease-in-out;
	transition: opacity 1s ease-in-out;
	width:100%;
	height:100%;
	filter: brightness(75%);
	-webkit-filter: brightness(75%);
	-moz-filter: brightness(75%);
	-o-filter: brightness(75%);
}

#welcomeDiv{
	color:white;
}

.btn{
	margin: 0 0 15px 0;
}

/* Settings page */

.onoffswitch {
	position: relative; width: 90px;
	-webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
}
.onoffswitch-checkbox {
	display: none;
}
.onoffswitch-label {
	display: block; overflow: hidden; cursor: pointer;
	border: 2px solid #FFFFFF; border-radius: 20px;
}
.onoffswitch-inner {
	display: block; width: 200%; margin-left: -100%;
	transition: margin 0.3s ease-in 0s;
}
.onoffswitch-inner:before, .onoffswitch-inner:after {
	display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
	font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
	box-sizing: border-box;
}
.onoffswitch-inner:before {
	content: "ON";
	padding-left: 10px;
	background-color: #168CCC; color: #FFFFFF;
}
.onoffswitch-inner:after {
	content: "OFF";
	padding-right: 10px;
	background-color: #EEEEEE; color: #999999;
	text-align: right;
}
.onoffswitch-switch {
	display: block; width: 16px; margin: 7px;
	background: #FFFFFF;
	position: absolute; top: 0; bottom: 0;
	right: 56px;
	border: 2px solid #FFFFFF; border-radius: 20px;
	transition: all 0.3s ease-in 0s;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
	margin-left: 0;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
	right: 0px;
}

/*CHAT*/

.chat-box {
	font:normal normal 11px/1.4 Tahoma,Verdana,Sans-Serif;
	color:#333;
	width:25%; /* Chatbox width */
	border:1px solid #344150;
	border-bottom:none;
	background-color:white;
	position:fixed;
	bottom:0;
	z-index:9999;
	-webkit-box-shadow:1px 1px 5px rgba(0,0,0,.2);
	-moz-box-shadow:1px 1px 5px rgba(0,0,0,.2);
	box-shadow:1px 1px 5px rgba(0,0,0,.2);
}

.chat-box > input[type="checkbox"] {
	display:block;
	margin:0 0;
	padding:0 0;
	position:absolute;
	top:0;
	right:0;
	left:0;
	width:100%;
	height:26px;
	z-index:4;
	cursor:pointer;
	opacity:0;
	filter:alpha(opacity=0);
}

.chat-box > label {
	display:block;
	height:24px;
	line-height:24px;
	background-color:#344150;
	color:white;
	font-weight:bold;
	padding:0 1em 1px;
}

.chat-box > label:before {content:attr(data-collapsed)}

.chat-box .chat-box-content {
	padding:10px;
	display:none;
	overflow-y: scroll;
	max-height: 400px;
}

#chatMessage{
	width: 100%;
}

.messageLI{
	list-style-type: none;
}

/* hover state */
.chat-box > input[type="checkbox"]:hover + label {background-color:#404D5A}

/* checked state */
.chat-box > input[type="checkbox"]:checked + label {background-color:#212A35}
.chat-box > input[type="checkbox"]:checked + label:before {content:attr(data-expanded)}
.chat-box > input[type="checkbox"]:checked ~ .chat-box-content {display:block}


/* Small devices (tablets, 768px and up) */
@media (max-width: 999px) {
	#frontMainDiv{
		margin:0;
	}
	#frontRegister{
		margin-top: 2%;
		position: initial;
	}
}

